Changes in 1.7.3 (??.??.2011)

 - fix serialization for CBillboardSceneNode, it had missed 2 color (thx for finding + patch from pc0de)

 - EMIE_MOUSE_WHEEL messages now handled correctly in several gui-element when wheel isn't just 1.0 or -1.0 (thx @ Reiko for reporting)

 - Fix problems in Textwrapping in CGUIStaticText. Did use wrong size and did ignore last word of the text (thx @ Reiko for bugreport)

 - Fix crash in collada (.dae) loading
  
 - Fix memory-leaks in example 22 MaterialViewer

 - Fix array::erase which did destroy objects more than once when used with a range (thx @ RedDragCZ for reporting + testcase).

 - Copy now all membervariables for CCameraSceneNode when cloning.

 - ICameraSceneNode::IsOrthogonal is correctly serialized and cloned now.

 - CGUIScrollBar passes unused mousemove-events now to parent element. Fixes focus-bug in ComboBox reported by REDDemon here: http://irrlicht.sourceforge.net/phpBB2/viewtopic.php?t=43474&highlight=

 - Fix clipping in CGUITabControl

 - Fix clipping in CGUITable, reported by ceyron

 - Skip bone weights and additional information in ms3d file if no joint was defined before.

 - Fix mem leak in CImage, found by mloren.

 - Fix tga writing, reported by xirtamatrix

 - Tab-positions care now about the borders correctly

 - TabControl now respositions it's tabs when setTabVerticalAlignment is changed (thx @ ceyron for reporting+testcase)

 - CGUIModalScreen now no longer takes focus itself, but tries to give it first child when possible to fix modal windows losing focus all the time

 - Modal screens no longer blinks when gui-elements call removeFocus on themself (thx @ yaten for reporting+testcase)

 - Fix crash in multiline-editbox when selecting with mouse (thx @ ceyron for reporting and testcase)

 - Fix render context creation for OpenGL under Windows.

 - Fix the reset problem of d3d9 driver in combination with hardware buffers.

 - Fix .x loader in case of unused vertices.
