@@ -1,5 +1,7 @@
 Changes in 1.7.3 (??.??.2011)
 
+ - Recalculate FrameRect and ScrollPos in CGUIEditBox when AbsoluteRect gets changed (thx @ serengeor for report + testcase)
+
  - fix serialization for CBillboardSceneNode, it had missed 2 color (thx for finding + patch from pc0de)
 
  - EMIE_MOUSE_WHEEL messages now handled correctly in several gui-element when wheel isn't just 1.0 or -1.0 (thx @ Reiko for reporting)
